[#266] cleanup